--- a/pages/page001/css/style.css
+++ b/pages/page001/css/style.css
@@ -32,6 +32,7 @@ body {
 }
 .article p{
     font-family: "Avenir-Roman";
+    font-size: 26px;
     color: var(--color-2);
 }
 .article button{
@@ -39,6 +40,7 @@ body {
     color: var(--color-3);
     background-color: var(--color-1);
     padding: 10px 20px;
+    font-size: 18px;
     border: none;
     cursor: pointer;
     border-radius: 10px;
