--- a/pages/page006/css/variables.css
+++ b/pages/page006/css/variables.css
@@ -1,13 +1,18 @@
 :root{
-    --color-1:#252525;
-    --color-1:hsla(0, 0%, 15%, 0.800);
-    --color-3:hsla(0, 0%, 100%, 1);
+    --color-1:#050505;
+    --color-2:#333333;
+    --color-3:#FFFFFF;
+    --color-4:#685FD4;
 }
 @font-face{
-    font-family: "Avenir-Heavy";
-    src: url(../storage/fonts/AvenirLTStd-Heavy.otf);
+    font-family: "Play-Bold";
+    src: url(../storage/fonts/PlayfairDisplay-Bold.ttf);
 }
 @font-face{
-    font-family: "Avenir-Roman";
-    src: url(../font/Montserrat/static/AvenirLTStd-Roman.otf);
+    font-family: "Work-Medium";
+    src: url(../storage/fonts/WorkSans-Medium.ttf);
+}
+@font-face{
+    font-family: "Work-Regular";
+    src: url(../storage/fonts/WorkSans-Regular.ttf);
 }
