ci: :construction: Fonts review, now it's really done

--- a/pages/page006/css/style.css
+++ b/pages/page006/css/style.css
@@ -24,7 +24,7 @@ body {
     margin-left: 5vw;
     margin-right: 5vw;
     justify-content: left;
-    font-family: "Avenir-Heavy";
+    font-family: "Play-Bold";
     font-size: 64px;
     margin-top: 10px;
     margin-bottom: 15px;
@@ -35,36 +35,48 @@ body {
     margin-right: 5vw;
     margin-top: 15px;
     margin-bottom: 20px;
-    font-family: "Avenir-Roman";
+    font-family: "Work-Regular";
     font-size: 26px;
     color: var(--color-2);
 }
 .buttons{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     width: 80%;
     margin-left: 5vw;
     margin-top: 10px;
     margin-bottom: 50px;
 }
-.buttons button{
+.buttons :nth-child(1){
     height: 50px;
     width: 200px;
-    font-family: "Avenir-Roman";
+    font-family: "Work-Medium";
     color: var(--color-3);
     background-color: var(--color-1);
     font-size: 18px;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+    margin-right: 20%;
 }
+.buttons :nth-child(2){
+    height: 50px;
+    width: 200px;
+    font-family: "Work-Medium";
+    color: var(--color-1);
+    background-color: var(--color-3);
+    font-size: 18px;
+    border: 1px solid black;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 .icons {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: white;
+    background-color: var(--color-3);
     border: 1px solid black;
     border-radius: 15px;
     padding: 20px;
@@ -87,8 +99,9 @@ body {
     margin-bottom: 5px;
 }
 .icon-item p {
+    font-family: "Work-Regular";
     font-size: 14px;
-    color: black;
+    color: #111111;
     margin-left: 0%;
     margin-top: 2%;
     margin-right: auto;
