--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,161 @@
     box-sizing: border-box;
     background: var(--color-1);
 }
+
+body {
+    width: 100vw;
+    height: 100vh;
+}
+.SIDEBAR {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 70px;
+    background: #1a5463;
+    overflow-x: hidden;
+    padding: 10px;
+    transition: 0.6s ease;
+    box-shadow: 0 0 10px black;
+    z-index: 2;
+}
+.SIDEBAR:hover {
+    width: 20vw;
+    transition: 0.5s ease;
+}
+.SIDEBAR svg {
+    background-color: transparent;
+    width: 50px; 
+    height: 50px;
+    fill: none;
+    transform: matrix(1, 0, 0, 1, 0, 0) rotate(0);
+    transition: 0.4s ease;
+    border: none;
+}
+.SIDEBAR svg:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: hidden;
+    gap: 20px;
+    height: 60vh;
+    opacity: 0;
+    visibility: hidden;
+    background: white;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    background: transparent;
+}
+.info h2 {
+    background: transparent;
+    color: white;
+}
+.info p {
+    background: transparent;
+    color: white;
+    margin-bottom: 40vh;
+}
+.SIDEBAR:hover .info {
+    opacity: 1;
+    visibility: visible;
+}
+.contact {
+    height: 15vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background: transparent;
+}
+.btn {
+    transition: 0.4s ease;
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+    border: none;
+}
+.btn:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.contact .btn img {
+    display: block;
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+}
+
+
+.HOME {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100vw;
+    z-index: 1;
+    padding-left: 70px;
+}
+
+
+.carousel {
+    /* Carrusel*/
+    
+    height: 65vh;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none;
+    /* Ocultar scrollbar en Firefox */
+    width: 80vw;
+}
+.carousel::-webkit-scrollbar {
+    display: none;
+    /* Ocultar scrollbar en Chrome/Safari */
+}
+.carousel .carousel-item:nth-child(1) {
+    height: inherit;
+    width: 90vw;
+    background-image: url('../storage/img/COLDPLAY-WT.jpg');    /* Ruta de la imagen */
+    background-size: cover;    /* Ajusta la imagen para cubrir el contenedor */
+    background-position: center 10%;    /* Centra la imagen */
+    background-repeat: no-repeat;    /* Evita que la imagen se repita */
+    background-attachment: scroll;    /* Fija la imagen al hacer scroll */
+    border-radius: 12px;
+    flex-shrink: 0;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.carousel-item:hover{
+    transform: scale(0.95);
+}
+.carousel .carousel-item:nth-child(2) {
+    height: inherit;
+    width: 90vw;
+    background-image: url('../storage/img/MUSE-WT.jpg');    /* Ruta de la imagen */
+    background-size: cover;    /* Ajusta la imagen para cubrir el contenedor */
+    background-position: center 10%;    /* Centra la imagen */
+    background-repeat: no-repeat;    /* Evita que la imagen se repita */
+    background-attachment: scroll;    /* Fija la imagen al hacer scroll */
+    border-radius: 12px;
+    flex-shrink: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
